# cstack

./: README.md  install.sh
.claude-plugin/: marketplace.json
plugins/aira/.claude-plugin/: plugin.json
plugins/aira/skills/aira/: SKILL.md  aira.py
plugins/dev/: README.md
plugins/dev/.claude-plugin/: plugin.json
plugins/dev/skills/pr-review/: SKILL.md  init_review.py
plugins/meta-cognition/: README.md  llm-behaviour.md
plugins/meta-cognition/.claude-plugin/: plugin.json
plugins/pr-review/: README.md
plugins/pr-review/.claude-plugin/: plugin.json
plugins/pr-review/cli/: README.md  pyproject.toml
plugins/pr-review/cli/pr_review/: __main__.py  cli.py  daemon.py  paths.py
plugins/pr-review/docs/: ARCHITECTURE.md  distribution.md  index.md
plugins/pr-review/docs/tech-detailing/: components.md  decisions.md  index.md  workflows.md
