[project]
name = "pr-review"
version = "0.0.1"
description = "Local-first GitHub PR review CLI. Drafts line-anchored review comments locally; publishes to GitHub atomically on explicit user action."
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
pr-review = "pr_review.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pr_review*"]
